--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+node_modules
+
 # Frontend (Vite + React)
 frontend/node_modules/
 frontend/dist/
@@ -29,3 +31,38 @@ desktop.ini
 # Env files
 .env
 .env.*.local
+
+### NextJS ###
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
