--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.9",
@@ -43,7 +41,6 @@
     "eslint-config-next": "15.3.1",
     "eslint-plugin-storybook": "^0.12.0",
     "playwright": "^1.52.0",
-    "storybook": "^8.6.12",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5",
