--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
@@ -20,12 +21,14 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-leaflet": "^5.0.0",
     "react-oidc-context": "^3.3.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
@@ -47,7 +50,7 @@
     "eslint-config-next": "15.3.1",
     "eslint-plugin-storybook": "^0.12.0",
     "playwright": "^1.52.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5",
     "vitest": "^3.1.3"
