--- a/backend/restaurant/src/main/resources/application.properties
+++ b/backend/restaurant/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=restaurant 
 
 spring.elasticsearch.uris=http://localhost:9200
+
+spring.security.oauth2.resoruceserver.jwt.issuer-uri=http://localhost:9090/realms/grubgrade
